--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   shared_preferences: ^2.0.15
   provider: ^6.0.3
   cupertino_icons: ^1.0.5
-
+  file_picker: ^6.1.1
+  url_launcher: ^6.2.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
