--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,65 @@
+# Django
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 media/
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Logs
+log_verification.txt
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Backup files
+*.bak
+*.backup
+
+# Test coverage
+htmlcov/
+.coverage
+.pytest_cache/
+
+# Node modules (if any frontend build tools)
+node_modules/
+
+# Compiled files
+*.pyo
+*.pyc
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
