--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   file_picker: ^6.1.1
   url_launcher: ^6.2.5
+  image_picker: ^1.0.7
   
 dev_dependencies:
   flutter_test:
