--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   http: ^0.13.5
   shared_preferences: ^2.0.15
   provider: ^6.0.3
@@ -22,4 +25,5 @@ dev_dependencies:
   flutter_lints: ^2.0.1
 
 flutter:
-  uses-material-design: true 
+  uses-material-design: true
+  generate: true 
